tests/ui/attributes/doc-test-literal.stderr
error: malformed `doc` attribute input
  --> $DIR/doc-test-literal.rs:3:13
   |
LL | #![doc(test(""))]
   |             ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
note: the lint level is defined here
  --> $DIR/doc-test-literal.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

