tests/ui/attributes/doc-test-literal.rs
#![deny(invalid_doc_attributes)]

#![doc(test(""))]
//~^ ERROR
//~| WARN

fn main() {}
